# cmake-multi-targets

./: .travis.yml  CMakeLists.txt  DEPENDENCIES  DICTIONARY  ParallelBuildTargetUtils.cmake  README.md  appveyor.yml  biicode.conf  conanfile.py
test/: CMakeLists.txt  CreateMirroredExecutableWithSuffix.cmake  CreateMirroredSharedLibraryWithSuffix.cmake  CreateMirroredStaticLibraryWithSuffix.cmake  FailToCreateMirroredUtilityTarget.cmake  FailToCreateMirroredUtilityTargetVerify.cmake  MirroredBuildTargetsAdditionalCompileFlags.cmake  MirroredBuildTargetsAdditionalCompileFlagsVerify.cmake  MirroredBuildTargetsAdditionalLinkFlags.cmake  MirroredBuildTargetsAdditionalLinkFlagsVerify.cmake  MirroredBuildTargetsDependOnMirroredDependencies.cmake  MirroredBuildTargetsDependOnMirroredDependenciesVerify.cmake  MirroredBuildTargetsInheritDependencies.cmake  MirroredBuildTargetsInheritDependenciesVerify.cmake  MirroredBuildTargetsInheritSources.cmake  MirroredBuildTargetsInheritTargetLinkLibraries.cmake  MirroredBuildTargetsInheritTargetLinkLibrariesVerify.cmake
